--- a/templates/home.html
+++ b/templates/home.html
@@ -77,9 +77,13 @@
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                <div class="col-md-12 text-center">
-                    <a class="btn btn-light" href="#" role="button">Upload File</a>
-                </div>
+                <form ref="form" method="POST" name="form" enctype="multipart/form-data"> <!-- return false prevents redirection-->
+                    <input type="file" ref="fileinput" name="file" v-on:change="form.submit()" /> 
+                    (<< form.message >>)
+                    <!--<div class="col-md-12 text-center">
+                        <a class="btn btn-light" href="#" role="button">Upload File</a>
+                    </div>-->
+                </form>
             </li>
 
             <!-- Nav Item - Charts -->
@@ -204,6 +208,40 @@
 <script>
 
     var clusterGraph = new Vue({
-        el: "#content-wrapper"
+        el: "#wrapper",
+        data: function() {
+            return {
+                formMessage: "upload file"
+            }
+        },    
+        methods: {
+            postData: function(urlStr, options){
+                return new Promise((resolve, reject) => {
+                    fetch(urlStr, options)
+                    .then((res) => {
+                        resolve(res.json())
+                    });
+                });
+            },
+            submitForm: function(e){
+                console.log("running");
+                e.preventDefault();
+                form = document.getElementById("fform")
+                const formData = new FormData(form);
+                const options = {
+                    method: "POST",
+                    body: formData
+                };
+                this.postData("/upload", options)
+                .then((data) => {
+                    console.log(data);
+                    this.formMessage = data.message;
+                    return false;
+                });
+                /*      
+                console.log(this.$refs.form.$el);
+                this.$refs.form.submit();*/
+            }
+        }
     });
 </script>
