--- a/templates/home.html
+++ b/templates/home.html
@@ -19,58 +19,16 @@
 
     <!-- Custom styles for this template-->
     <link href="static/d.min.css" rel="stylesheet">
-    <link href="static/modules/range/range.css" rel="stylesheet">
+    <link href="static/components/css/range.css" rel="stylesheet">
+    <link href="static/components/css/file-input.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
     <script src='static/chart.min.js'></script>
-    <script src='static/modules/phChartController.js'></script>
-    <script src='static/modules/ClusterController.js'></script>
-    
+    <script src='static/components/vue-range.js'></script>
+    <script src='static/components/phChartController.js'></script>
+    <script src='static/components/ClusterController.js'></script>
+
     <style>
-        input[type=file] {
-          display: block;
-          width: 100%;
-          padding: 0.375rem 0.75rem;
-          font-size: 1rem;
-          font-weight: 400;
-          line-height: 1.5;
-          color: #212529;
-          background-color: #fff;
-          background-clip: padding-box;
-          border: 1px solid #ced4da;
-          -webkit-appearance: none;
-          -moz-appearance: none;
-          appearance: none;
-          border-radius: 0.25rem;
-          transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-        }
-        input[type=file] {
-          overflow: hidden;
-        }
-        input[type=file]:not(:disabled):not([readonly]) {
-          cursor: pointer;
-        }
-        input[type=file]:focus {
-          color: #212529;
-          background-color: #fff;
-          border-color: #86b7fe;
-          outline: 0;
-          box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
-        }
-        input[type=file]::file-selector-button {
-          padding: 0.375rem 0.75rem;
-          margin: -0.375rem -0.75rem;
-          -webkit-margin-end: 0.75rem;
-          margin-inline-end: 0.75rem;
-          color: #212529;
-          background-color: #e9ecef;
-          pointer-events: none;
-          border-color: inherit;
-          border-style: solid;
-          border-width: 0;
-          border-inline-end-width: 1px;
-          border-radius: 0;
-          transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-        }
+
     </style>
 </head>
 
@@ -129,8 +87,8 @@
                     <label for="file-upload" class="custom-file-upload">
                         Custom Upload
                     </label>
-                    <input type="file" ref="fileinput" name="file-upload" v-on:change="form.submit()" /> 
-                   
+                    <input type="file" ref="fileinput" name="file-upload" v-on:change="form.submit()" />
+
                     <!--<div class="col-md-12 text-center">
                         <a class="btn btn-light" href="#" role="button">Upload File</a>
                     </div>-->
@@ -215,12 +173,12 @@
                                 </div>
                                 <!-- Card Body -->
                                 <div id="phContainer" class="card-body">
-                                    <test thisid="phLineGraph"></test>                                   
+                                    <line-chart thisid="phLineGraph" api="api" info="ph" :params='[{name: "fraglen", default: 10, pmin: 1, pmax: 20, label: "Fragment Length"},{name: "ph", default: 7, pmin: 0, pmax: 14, label: "pH"},{name: "num", default: 2, pmin: 1, pmax: 5, label: "Cluster Number"}]' :axes='{"x":{label: "Amino Acid Position"}, "y": {"label": "Charge"}}'></line-chart>
                                     <div class="chart-area"><canvas id="phLineGraph"></canvas></div>
                                 </div>
                             </div>
                         </div>
-                        
+
                         <div class="col-xl-6 col-lg-12 mx-auto">
                             <div class="card shadow mb-4">
                                 <div
@@ -229,30 +187,42 @@
                                 </div>
                                 <!-- Card Body  (Chart over here)-->
                                 <div id="clusterContainer" class="card-body">
-                                    <clustercontrol thisid="clusterGraph"></clustercontrol>
+                                    <scatter graphid="clusterGraph" api="group" info="ph" :params='[{name: "fraglen", default: 10, pmin: 1, pmax: 20, label: "Fragment Length"},{name: "ph", default: 7, pmin: 0, pmax: 14, label: "pH"},{name: "num", default: 2, pmin: 1, pmax: 5, label: "Cluster Number"}]'></scatter>
                                     <div class="chart-area"><canvas id="clusterGraph"></canvas></div>
                                 </div>
                             </div>
                         </div>
                     </div>
-<!--
                     <div class="row">
-                      
+                        <div class="col-xl-6 col-lg-12 mx-auto">
+                            <div class="card shadow mb-4">
+                                <div
+                                    class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                                    <h6 class="m-0 font-weight-bold text-primary">Protein Hydropathy</h6>
+                                </div>
+
+                                <div class="card-body">
+                                    <line-chart thisid="linerGraph" api="apii" info="hydro" :params='[{name: "fraglen", default: 10, pmin: 1, pmax: 20, label: "Fragment Length"}]' :axes='{"x":{label: "Amino Acid Position"}, "y": {"label": "Hydropathy"}}'></line-chart>
+                                    <div class="chart-area"><canvas id="linerGraph"></canvas></div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="col-xl-6 col-lg-12 mx-auto">
                             <div class="card shadow mb-4">
                                 <div
                                     class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                                     <h6 class="m-0 font-weight-bold text-primary">Protein Clusters</h6>
                                 </div>
- 
-                                <div id="clusterContainer" class="card-body">
-                                    <clustercontrol></clustercontrol>
-                                    <div class="chart-area"><canvas id="clusterGraph"></canvas></div>
+
+                                <div id="hydroClusterContainer" class="card-body">
+                                    <scatter graphid="hydroClusterGraph" api="group" info="hydro" :params='[{name: "fraglen", default: 10, pmin: 1, pmax: 20, label: "Fragment Length"},{name: "num", default: 2, pmin: 1, pmax: 5, label: "Cluster Number"}]'></scatter>
+                                    <div class="chart-area">
+                                      <canvas id="hydroClusterGraph"></canvas>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
--->
 
             </div>
             <!-- End of Main Content -->
@@ -272,41 +242,16 @@
    </div>
 <script>
 
-    var clusterGraph = new Vue({
+    var pageVue = new Vue({
         el: "#wrapper",
         data: function() {
             return {
-                formMessage: "upload file"
+                formMessage: "upload file",
+                vv: 5
             }
-        },    
+        },
         methods: {
-            postData: function(urlStr, options){
-                return new Promise((resolve, reject) => {
-                    fetch(urlStr, options)
-                    .then((res) => {
-                        resolve(res.json())
-                    });
-                });
-            },
-            submitForm: function(e){
-                console.log("running");
-                e.preventDefault();
-                form = document.getElementById("fform")
-                const formData = new FormData(form);
-                const options = {
-                    method: "POST",
-                    body: formData
-                };
-                this.postData("/upload", options)
-                .then((data) => {
-                    console.log(data);
-                    this.formMessage = data.message;
-                    return false;
-                });
-                /*      
-                console.log(this.$refs.form.$el);
-                this.$refs.form.submit();*/
-            }
+
         }
     });
 </script>
