--- a/templates/home.html
+++ b/templates/home.html
@@ -40,27 +40,15 @@
         <!-- Sidebar -->
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
-            <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center">
-                <div class="sidebar-brand-text mx-3">Test</div>
+                <div class="sidebar-brand-text mx-3">ProtGrapher</div>
             </a>
-
-            <!-- Divider -->
-            <hr class="sidebar-divider my-0">
-
-            <!-- Nav Item - Dashboard -->
-            <li class="nav-item active">
-                <a class="nav-link" href="index.html">
-                    <i class="fas fa-fw fa-tachometer-alt"></i>
-                    <span>Options</span></a>
-            </li>
-
             <!-- Divider -->
             <hr class="sidebar-divider">
 
             <!-- Heading -->
             <div class="sidebar-heading">
-                Interface
+
             </div>
 
             <!-- Nav Item - Pages Collapse Menu -->
@@ -84,7 +72,7 @@
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item row">
                 <form ref="form" class="col-xl-10 col-lg-12 mx-auto" method="POST" name="form" enctype="multipart/form-data"> <!-- return false prevents redirection-->
-                    <label for="file-upload" class="custom-file-upload">
+                    <label for="file-upload">
                         Custom Upload
                     </label>
                     <input type="file" ref="fileinput" name="file-upload" v-on:change="form.submit()" />
@@ -95,12 +83,6 @@
                 </form>
             </li>
 
-            <!-- Nav Item - Charts -->
-            <li class="nav-item">
-                <a class="nav-link" href="charts.html">
-                    <i class="fas fa-fw fa-chart-area"></i>
-                    <span>Charts</span></a>
-            </li>
 
         </ul>
         <!-- End of Sidebar -->
@@ -122,7 +104,7 @@
                     <!-- Topbar Search -->
                     <form
                         class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
-                        <div class="input-group">
+                        <div class="input-group" style="opacity:0">
                             <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
                                 aria-label="Search" aria-describedby="basic-addon2">
                             <div class="input-group-append">
@@ -166,8 +148,7 @@
                         <div class="col-xl-6 col-lg-12 mx-auto">
                             <div class="card shadow mb-4">
                                 <!-- Card Header - Dropdown -->
-                                <div
-                                    class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                                     <h6 class="m-0 font-weight-bold text-primary">Protein Charges</h6>
 
                                 </div>
